Opened 13 years ago
Closed 13 years ago
#8648 closed bug (fixed)
Toggling toolbar results in redraw errors
Reported by: | humdinger | Owned by: | leavengood |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/ShowImage | Version: | R1/Development |
Keywords: | redraw artefact | Cc: | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is hrev44214.
I recently managed to fix a redrawing bug that produced similar redrawing artefacts as described in this ticket (see commit).
Everything's OK until you toggle the toolbar. Once it's toggled on/off, zooming into the image and panning it horizontally will leave vertical lines from the right window border. Looking back into the above commit, I'm really not sure why that fix worked as it's in the fullscreen part...
Change History (2)
comment:1 by , 13 years ago
comment:2 by , 13 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
It was indeed an off-by-one error, you just were looking in the wrong place :)
This was a pain to debug, though in retrospect I should have added the printf frame size debugging which helped solve it much earlier in my bug-fixing efforts ;)
Fixed in hrev44260.
Reverted the above mentioned commit with hrev44259.
Apparently, the issue isn't with fullscreen, but only with toggling the toolbar. Entering fullscreen just also toggles the toolbar for auto-hiding.